8161651: Logic in ConnectionGraph::split_unique_types() wrongly assumes node always have memory input

Reviewed-by: thartmann, kvn